--- a/Introduction_Python.ipynb
+++ b/Introduction_Python.ipynb
@@ -8,17 +8,6 @@
     }
    },
    "source": [
-    "                                               #PYTHON"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
     "##PYTHON\n",
     "\n",
     "Developed by Guido van Rossum in the early 1990s\n",
@@ -38,7 +27,7 @@
     }
    },
    "source": [
-    "##INTRODUCTION_OF_PYTHON\n",
+    "##Introduction of Python\n",
     "\n",
     "Interpreted language: work with an evaluator\n",
     "for language expressions (like DrJava, but\n",
@@ -81,7 +70,7 @@
     }
    },
    "source": [
-    "##WHY_PYTHON\n",
+    "##Why Python\n",
     "1.Good example of scripting languamge\n",
     "2.“Pythonic” style is very concise\n",
     "3.Powerful but unobtrusive object system\n",
